去除apache依赖包